force-app/main/default/objects/Capacity_Reservation_Order__c/Capacity_Reservation_Order__c.object-meta.xml
<CustomObject>
    <label>Capacity Reservation Order</label>
    <nameField>
        
        <displayFormat>CRO-{00000}</displayFormat>
        
        <label>Capacity Reservation Order Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Capacity Reservation Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>