force-app/main/default/objects/Capacity_Reservation_Order__c/fields/Capacity_Type__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Type__c</fullName>
    <inlineHelpText>Determines whether the Capacity value is either Acquisition or Management</inlineHelpText>
    <label>Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>