force-app/main/default/objects/Capacity_Reservation_Order__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Small CS</fullName>
            </value>
            <value>
                <fullName>LMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>