force-app/main/default/objects/Capacity_Reservation_Order__c/fields/New_Reserved_Capacity_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>New_Reserved_Capacity_kW_DC__c</fullName>
    <label>New Capacity (kW DC)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>