force-app/main/default/objects/Capacity_Reservation_Order__c/fields/Responsible_for_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Capacity__c</fullName>
    <label>Responsible for Capacity</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Perch</fullName>
                
                
                    <label>Perch</label>
                
                </value>
            
                <value>
                
                    <fullName>Client</fullName>
                
                
                    <label>Client</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>