force-app/main/default/objects/Capacity_Reservation_Order__c/fields/Shared_Solar_System_Order__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Solar System Order</label>
    <referenceTo>Shared_Solar_System_Order__c</referenceTo>
    <relationshipLabel>Capacity Reservation Orders</relationshipLabel>
    <relationshipName>Capacity_Reservation_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>